# claude-agent-sdk-python-demos

./: .gitignore  README.md  base-prompt.txt
.claude/skills/: python-agent-sdk-reference.md
.claude/skills/agent-skills-reference/: SKILL.md
.claude/skills/building-effective-agents/: SKILL.md
.claude/skills/structured-outputs-reference/: SKILL.md
.claude/skills/subagents-sdk-reference/: SKILL.md
chief-of-staff-agent/: chief_of_staff_agent.py
content-pipeline-agent/: README.md  content_pipeline.py  iteration.md  mock_data.py
content-pipeline-agent/.claude/skills/content-pipeline/: SKILL.md
email-agent/: README.md  email_agent.py  iteration.md  mock_data.py  pyproject.toml
email-agent/.claude/skills/email-triage/: SKILL.md
email-agent/.claude/skills/newsletter-management/: SKILL.md
email-agent/.claude/skills/support-response/: SKILL.md
eval-optimize-agent/: eval_optimize_agent.py
excel-agent/: README.md  excel_agent.py  iteration.md  mock_data.py
excel-agent/.claude/skills/xlsx/: SKILL.md
hello-world/: README.md  hello_world.py  iteration.md  pyproject.toml
llm-workflows/: main.py
observability-agent/: observability_agent.py
orchestrator-agent/: orchestrator_agent.py
prompts/: citations_agent.md  research_lead_agent.md
research-agent/: research_agent.py
resume-generator/: README.md  iteration.md  mock_data.py  pyproject.toml  resume_generator.py
shared/: __init__.py  cli.py
task-breakdown-agent/: README.md  iteration.md  pyproject.toml  task_breakdown.py
